--- a/index.scss
+++ b/index.scss
@@ -1,9 +1,26 @@
+
+$decor-color:#FFCC00;
+@mixin text-format {
+    font-family: 'Roboto';
+    font-style: normal;
+}
+@mixin text-format2 {
+    font-family: 'Raleway';
+    font-style: normal;
+}
+
+@mixin border-deco {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    z-index: -1;
+}
+
 .header{
     text-align: center;
     margin-bottom: 40px;
     p{
-        font-family: 'Raleway';
-        font-style: normal;
+        @include text-format2;
         font-weight: 500;
         font-size: 18px;
         line-height: 24px;
@@ -11,16 +28,15 @@
         color: #898F8F;
     }
     h1{
-        font-family: 'Roboto';
-        font-style: normal;
+        @include text-format;
         font-weight: 900;
         font-size: 60px;
         line-height: 66px;
         text-transform: uppercase;
-        color: #FFCC00;
+        color: $decor-color;
     }
     .hr{
-        border: 1px solid #FFCC00;
+        border: 1px solid $decor-color;
         width: 210px;
         height: 0px;
     }
@@ -36,10 +52,7 @@
     display: flex;
     gap: 85px;
     flex-wrap: nowrap;
-    // padding-left: 70px;
-    // padding-right: 205px;
     align-items: center;
-    // width: 1170px;
     box-sizing:border-box;
     justify-content: center;
 
@@ -49,57 +62,44 @@
         height: 400px;
    
         .left_border{
-            position: absolute;
-            border-top: #FFCC00 1px solid;
-            border-left: #FFCC00 1px solid;
+            @include border-deco;
+            border-top: $decor-color 1px solid;
+            border-left: $decor-color 1px solid;
             left: -15px;
-            top: -15px;
-            width: 100px;
-            height: 100px;
-            z-index: -1;
+            top: -15px; 
         }
         .right_border{
-            position: absolute;
-            border-top: #FFCC00 1px solid;
-            border-right: #FFCC00 1px solid;
+            @include border-deco;
+            border-top: $decor-color 1px solid;
+            border-right: $decor-color 1px solid;
             right: -15px;
             top: -15px;
-            width: 100px;
-            height: 100px;
-            z-index: -1;
         }
         .rightbottom_border{
-            position: absolute;
-            border-bottom: #FFCC00 1px solid;
-            border-right: #FFCC00 1px solid;
+            @include border-deco;
+            border-bottom: $decor-color 1px solid;
+            border-right: $decor-color 1px solid;
             right: -15px;
             bottom: -15px;
-            width: 100px;
-            height: 100px;
-            z-index: -1;
         }
 
         .leftbottom_border{
-            position: absolute;
-            border-bottom: #FFCC00 1px solid;
-            border-left: #FFCC00 1px solid;
+            @include border-deco;
+            border-bottom: $decor-color 1px solid;
+            border-left: $decor-color 1px solid;
             left: -15px;
             bottom: -15px;
-            width: 100px;
-            height: 100px;
-            z-index: -1;
         }
     }
     .middle{
         height: 560px;
-        border: 1px solid #FFCC00;
+        border: 1px solid $decor-color;
     }
     .right{
         text-align: center;
 
         h2{
-            font-family: 'Roboto';
-            font-style: normal;
+            @include text-format;
             font-weight: 900;
             font-size: 36px;
             line-height: 42px;
@@ -109,13 +109,12 @@
         }
         .hr_afterh2{
             width: 100px;
-            border: 1px solid #FFCC00;
+            border: 1px solid $decor-color;
             margin: auto;
             margin-bottom: 30px;
         }
         h3{
-            font-family: 'Raleway';
-            font-style: normal;
+            @include text-format2;
             font-weight: 400;
             font-size: 24px;
             line-height: 36px;
@@ -128,8 +127,7 @@
             margin-bottom: 49px;
         }
         p{
-            font-family: 'Raleway';
-            font-style: normal;
+            @include text-format2;
             font-weight: 500;
             font-size: 14px;
             line-height: 24px;
@@ -148,7 +146,7 @@
             text-align: center;
             text-transform: uppercase;
             color: #666666;
-            border: 1px solid #FFCC00;
+            border: 1px solid $decor-color;
             width: 118px;
             height: 24px;
         }
@@ -161,21 +159,22 @@
             .under_but1{
                 width: 10px;
                 height: 4px;
-                background: #FFCC00;
+                background: $decor-color;
             }
             .under_but2{
                 width: 20px;
                 height: 4px;
-                background: #FFCC00;
+                background: $decor-color;
             }
         }
     }
 }
 
    
-    body{
+    .form{
         padding: 121px 135px 122px 135px;
-   
+        display: flex;
+        flex-direction: column;
     }
 
     @media only screen and (max-width: 768px){
