--- a/index.scss
+++ b/index.scss
@@ -54,7 +54,9 @@ $decor-color:#FFCC00;
     flex-wrap: nowrap;
     align-items: center;
     box-sizing:border-box;
-    justify-content: center;
+    justify-content: flex-end;
+    margin: 0 auto 122px auto;
+    max-width: 1030px;
 
     .left{
         position: relative;
@@ -170,12 +172,7 @@ $decor-color:#FFCC00;
     }
 }
 
-   
-    .form{
-        padding: 121px 135px 122px 135px;
-        display: flex;
-        flex-direction: column;
-    }
+ 
 
     @media only screen and (max-width: 768px){
         .content{
