--- a/src/style/index.css
+++ b/src/style/index.css
@@ -38,7 +38,9 @@
   flex-wrap: nowrap;
   align-items: center;
   box-sizing: border-box;
-  justify-content: center;
+  justify-content: flex-end;
+  margin: 0 auto 122px auto;
+  max-width: 1030px;
 }
 .content .left {
   position: relative;
@@ -163,12 +165,6 @@
   width: 20px;
   height: 4px;
   background: #FFCC00;
-}
-
-.form {
-  padding: 121px 135px 122px 135px;
-  display: flex;
-  flex-direction: column;
 }
 
 @media only screen and (max-width: 768px) {
